--- a/Dockerfile.slim.build
+++ b/Dockerfile.slim.build
@@ -12,7 +12,7 @@ RUN go version && go get -v -u github.com/markbates/deplist/deplist
 RUN go get -v -u github.com/gobuffalo/flect \
 && go get -v -u github.com/gobuffalo/makr \
 && go get -v -u github.com/gobuffalo/packr/v2 \
-&& go get -v -u github.com/gobuffalo/tags \
+&& go get -v -u github.com/gobuffalo/tags/v3 \
 && go get -v -u github.com/gobuffalo/pop \
 && go get -v -u github.com/gobuffalo/x/... \
 && go get -v -u github.com/mattn/go-sqlite3 \
